# rs-kv

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  server.rs
src/api/: handlers.rs  mod.rs  pair.rs  routes.rs
src/db/: sqlite.rs
src/handlers/: error_handler.rs  kv_handler.rs  mod.rs  user_handler.rs
src/handlers/private/: mod.rs  password_handler.rs  profile_handler.rs
src/models/: cash.rs  mod.rs  pair.rs
src/models/private/: game.rs  mod.rs  password.rs  profile.rs
src/models/user/: mod.rs  new_user.rs  requests.rs  user.rs
src/pb/: mod.rs
src/routes/: kv_route.rs  mod.rs  user_route.rs
src/routes/private/: mod.rs  password_route.rs  profile_route.rs
src/tests/: cors_test.rs
src/utils/: random.rs
